--- a/StripeDemo/appsettings.Development.json
+++ b/StripeDemo/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "StripeOptions": {
+    "PublicKey": "pk_test_hl1GhgUQ3TNdvbSMcuVgvM3l00SHUBrYQe",
+    "SecretKey": "sk_test_upU8wG0MVJ4JRtOCW8hnu9QL00mKPlg1mQ",
+    "CurrencyCode": "cad"
   }
 }
